--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,13 @@
          FlutterApplication and put your custom class here. -->
 
     <uses-permission android:name="android.permission.SEND_SMS"/>
-    
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SENDTO" />
+            <data android:scheme="smsto"/>
+        </intent>
+    </queries>
+
     <application
         android:name="${applicationName}"
         android:label="example"
