--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,10 @@ description: A Flutter plugin to Send SMS and MMS on iOS and Android. If iMessag
 version: 2.3.3
 homepage: https://github.com/rodydavis/plugins
 repository: https://github.com/fluttercommunity/flutter_sms
-maintainer: Rody Davis (@rodydavis)
+maintainer: Nafis Kabbo (@nafiskabbo)
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ^1.10.0
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -25,7 +24,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.example.flutter_sms
+        package: com.example.flutter_sms_v2
         pluginClass: FlutterSmsPlugin
       ios:
         pluginClass: FlutterSmsPlugin
